@@ -15,6 +15,9 @@ libavutil:     2015-08-28
 
 API changes, most recent first:
 
+2015-12-28 - xxxxxxx - lavf 57.21.100 - avformat.h
+  Add automatic bitstream filtering; add av_apply_bitstream_filters()
+
 2015-12-22 - xxxxxxx - lavfi 6.21.101 - avfilter.h
   Deprecate avfilter_link_set_closed().
   Applications are not supposed to mess with links,
